--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   "homepage": "https://github.com/ahanasi/todo-app#readme",
   "devDependencies": {
     "css-loader": "^5.2.6",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "html-webpack-plugin": "^5.3.1",
     "node-sass": "^6.0.0",
     "sass": "^1.35.1",
